Apply OpenRewrite recipe for Java 21